# resume-job-matcher

./: .coverage  .flake8  .gitignore  .gitlab-ci.yml  LICENSE.txt  README.md  pyproject.toml  requirements.txt
config/: config.yaml
data/job_descriptions/: aiengineer.txt  backendengineer.txt  dataanalyst.txt  datascientist.txt  fullstackdev.txt
data/resumes/: Jamie_Neural.txt  Sam_Blinker.txt  john_doe_resume.txt
docs/: API.md
resume_job_matcher.egg-info/: PKG-INFO  SOURCES.txt
scripts/: setup.py
src/: main.py
src/data_fetchers/: job_scraper.py  resume_parser.py
src/etl/: pipeline.py
src/nlp/: text_processor.py
src/ranking/: matcher.py
src/utils/: config.py  database.py
tests/: test_basic.py
